--- a/arm32v7-min/Dockerfile
+++ b/arm32v7-min/Dockerfile
@@ -1,4 +1,4 @@
-FROM balenalib/armv7hf-debian:stretch
+FROM arm32v7/debian
 
 MAINTAINER Christian
 
@@ -21,8 +21,6 @@ RUN apt-get update && apt-get install -y \
 	# https://forum.iobroker.net/viewtopic.php?t=10920
 	python-dev\
 	sudo \
-	# install to get installed adapters
-	jq \
 	# Install nano and net-tools for debugging
 	nano \
 	net-tools \
@@ -38,18 +36,10 @@ RUN curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - \
  && \dpkg-reconfigure --frontend=noninteractive locales \
  && \update-locale LANG=de_DE.UTF-8 \
  && cp /usr/share/zoneinfo/Europe/Berlin /etc/localtime
- 
-#https://hub.docker.com/_/debian/
-#https://github.com/docker-library/postgres/blob/69bc540ecfffecce72d49fa7e4a46680350037f9/9.6/Dockerfile#L21-L24
-#RUN apt-get update && apt-get install -y locales && rm -rf /var/lib/apt/lists/* \
-#    && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
-#ENV LANG en_US.utf8
 
 ## Create the neccessary folders and set access rights
 RUN mkdir -p /opt/scripts \
- && mkdir -p /opt/maintenance_scripts \
- && chmod 777 /opt/scripts \
- && chmod 777 /opt/maintenance_scripts
+ && chmod 777 /opt/scripts
 
 ## ioBroker installation
 RUN echo $(hostname) > /opt/scripts/.install_host \
@@ -67,14 +57,12 @@ RUN sudo npm install node-gyp -g \
  ##ATTENTION THIS IS A TEMPORARY WORKAROUND TILL THE BUG IS FIXED
  && npm config set unsafe-perm false
  ##ATTENTION THIS IS A TEMPORARY WORKAROUND TILL THE BUG IS FIXED
- 
+
 ## Add necessary scripts
-COPY maintenance_scripts /opt/maintenance_scripts
 COPY scripts /opt/scripts
 
 # Set scripts executable
-RUN chmod -R +x /opt/scripts \
- && chmod -R +x /opt/maintenance_scripts
+RUN chmod -R +x /opt/scripts
 
 # Exposed Ports
 # 8081 iobroker admin
@@ -92,8 +80,6 @@ ENV LANG="de_DE.UTF-8" \
     TZ="Europe/Berlin" \
 	AVAHI="0" \
 	IOBROKER_ADMIN_PORT="8081" \
-	IOBROKER_WEB_PORT="8082" \
-	BT_ENABLE="0" \
-	ASTERISK="0"
+	IOBROKER_WEB_PORT="8082"
 
 CMD ["bash", "/opt/scripts/iobroker_startup.sh"]
