--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - chmod +x manifest-tool
 jobs:
   include:
-    - stage: amd64
+    - stage: amd64 and aarch64
       script:
       # Build amd64
         - docker build -t "duffbeer2000/dockertravis:amd64" ./amd64
@@ -19,7 +19,7 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:amd64-min" ./amd64-min
       # Build amd64-full
         - docker build -t "duffbeer2000/dockertravis:amd64-full" ./amd64-full
-    - stage: aarch64 und armv7hv
+    - stage: amd64 and aarch64
       script:
       # Switch Architecture
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
@@ -29,7 +29,7 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:aarch64-min" ./aarch64-min
       # Build aarch64-full
         - docker build -t "duffbeer2000/dockertravis:aarch64-full" ./aarch64-full
-    - stage: aarch64 und armv7hv
+    - stage: armv7hv und armv5e
       script:
       # Switch Architecture
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
@@ -39,17 +39,7 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:armv7hf-min" ./armv7hf-min
       # Build armv7hf-full
         - docker build -t "duffbeer2000/dockertravis:armv7hf-full" ./armv7hf-full
-    - stage: armv6 und armv5e
-      script:
-      # Switch Architecture
-        - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-      # Build armv6
-        - docker build -t "duffbeer2000/dockertravis:armv6" ./armv6
-      # Build armv6-min
-        - docker build -t "duffbeer2000/dockertravis:armv6-min" ./armv6-min
-      # Build armv6-full
-        - docker build -t "duffbeer2000/dockertravis:armv6-full" ./armv6-full
-    - stage: armv6 und armv5e
+    - stage: armv7hv und armv5e
       script:
       # Switch Architecture
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
@@ -64,7 +54,7 @@ after_success:
 # Tag and push built images
   - >
     if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-      docker login -u="$DOCKER_LOGIN" -p="$DOCKER_PASS"
+      echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
       VERSION=$(cat .VERSION)
       docker tag duffbeer2000/dockertravis:amd64 duffbeer2000/dockertravis:amd64-$VERSION
       docker push duffbeer2000/dockertravis:amd64
@@ -93,15 +83,6 @@ after_success:
       docker tag duffbeer2000/dockertravis:armv7hf-full duffbeer2000/dockertravis:armv7hf-full-$VERSION
       docker push duffbeer2000/dockertravis:armv7hf-full
       docker push duffbeer2000/dockertravis:armv7hf-full-$VERSION
-      docker tag duffbeer2000/dockertravis:armv6 duffbeer2000/dockertravis:armv6-$VERSION
-      docker push duffbeer2000/dockertravis:armv6
-      docker push duffbeer2000/dockertravis:armv6-$VERSION
-      docker tag duffbeer2000/dockertravis:armv6-min duffbeer2000/dockertravis:armv6-min-$VERSION
-      docker push duffbeer2000/dockertravis:armv6-min
-      docker push duffbeer2000/dockertravis:armv6-min-$VERSION
-      docker tag duffbeer2000/dockertravis:armv6-full duffbeer2000/dockertravis:armv6-full-$VERSION
-      docker push duffbeer2000/dockertravis:armv6-full
-      docker push duffbeer2000/dockertravis:armv6-full-$VERSION
       docker tag duffbeer2000/dockertravis:armv5e duffbeer2000/dockertravis:armv5e-$VERSION
       docker push duffbeer2000/dockertravis:armv5e
       docker push duffbeer2000/dockertravis:armv5e-$VERSION
