--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - chmod +x manifest-tool
 jobs:
   include:
-    - stage: amd64 and aarch64
+    - stage: Build docker images
       script:
       # Build amd64
         - docker build -t "duffbeer2000/dockertravis:amd64" ./amd64
@@ -19,7 +19,7 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:amd64-min" ./amd64-min
       # Build amd64-full
         - docker build -t "duffbeer2000/dockertravis:amd64-full" ./amd64-full
-    - stage: amd64 and aarch64
+    - stage: Build docker images
       script:
       # Switch Architecture
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
@@ -29,7 +29,7 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:aarch64-min" ./aarch64-min
       # Build aarch64-full
         - docker build -t "duffbeer2000/dockertravis:aarch64-full" ./aarch64-full
-    - stage: armv7hv und armv5e
+    - stage: Build docker images
       script:
       # Switch Architecture
         - docker run --rm --privileged multiarch/qemu-user-static:register --reset
@@ -39,16 +39,6 @@ jobs:
         - docker build -t "duffbeer2000/dockertravis:armv7hf-min" ./armv7hf-min
       # Build armv7hf-full
         - docker build -t "duffbeer2000/dockertravis:armv7hf-full" ./armv7hf-full
-    - stage: armv7hv und armv5e
-      script:
-      # Switch Architecture
-        - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-      # Build armv5e
-        - docker build -t "duffbeer2000/dockertravis:armv5e" ./armv5e
-      # Build armv5e-min
-        - docker build -t "duffbeer2000/dockertravis:armv5e-min" ./armv5e-min
-      # Build armv5e-full
-        - docker build -t "duffbeer2000/dockertravis:armv5e-full" ./armv5e-full
       #
 after_success:
 # Tag and push built images
@@ -83,15 +73,6 @@ after_success:
       docker tag duffbeer2000/dockertravis:armv7hf-full duffbeer2000/dockertravis:armv7hf-full-$VERSION
       docker push duffbeer2000/dockertravis:armv7hf-full
       docker push duffbeer2000/dockertravis:armv7hf-full-$VERSION
-      docker tag duffbeer2000/dockertravis:armv5e duffbeer2000/dockertravis:armv5e-$VERSION
-      docker push duffbeer2000/dockertravis:armv5e
-      docker push duffbeer2000/dockertravis:armv5e-$VERSION
-      docker tag duffbeer2000/dockertravis:armv5e-min duffbeer2000/dockertravis:armv5e-min-$VERSION
-      docker push duffbeer2000/dockertravis:armv5e-min
-      docker push duffbeer2000/dockertravis:armv5e-min-$VERSION
-      docker tag duffbeer2000/dockertravis:armv5e-full duffbeer2000/dockertravis:armv5e-full-$VERSION
-      docker push duffbeer2000/dockertravis:armv5e-full
-      docker push duffbeer2000/dockertravis:armv5e-full-$VERSION
     fi
 # Update repository manifest for multiarch duffbeer2000/dockertravis:latest
   - >
